Fix FAB not working on iOS

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -41,7 +41,7 @@ html, body {
   font-size: 1.3rem;
 }
 
-.fab-btn {
+#fab-btn {
   width: 70px;
   height: 70px;
   position: fixed;
@@ -56,6 +56,7 @@ html, body {
 
   &:hover {
     transform: scale(1.03);
+    cursor: pointer;
   }
 
   &:active {
